<resources>
    <string name="app_name">Unscramble</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wordCount">%d of %d words</string>
    <string name="Score">Score: %d</string>
    <string name="gameInstruction">Unscramble the word sing all the letters</string>
    <string name="skip">Skip</string>
    <string name="Submit">Submit</string>
</resources>