<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:context=".GameFragment">

        <TextView
            android:id="@+id/wordCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1 of 10 words"
            android:text="@string/wordCount"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Score: 10"
            android:text="@string/Score"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wordCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/word"
            tools:text = "adlfasdfa"
            app:layout_constraintBottom_toTopOf="@id/instruction"
            android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            />

        <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/gameInstruction"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFeild"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="Enter your word"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instruction">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textNoSuggestions"
                android:maxLines="1"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/skip"
            android:layout_width="0dp"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/submit"
            android:text="@string/skip"
            app:layout_constraintBaseline_toBaselineOf="@id/submit"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/skip"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/textFeild"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>